[tool.poetry]
name = "tagstr-playground"
version = "0.1.0"
description = ""
authors = ["Koudai Aono <koxudaxi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlite-core = {extras = ["all"], version = "^0.3.0"}
jupyterlite-pyodide-kernel = "^0.3.2"
ipython = { version = "8.26.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
